fix menu overlay on small screen

--- a/assets/_scss/components/_navigation.scss
+++ b/assets/_scss/components/_navigation.scss
@@ -1,4 +1,5 @@
 .Navbar {
+  position: relative;
   background-color: $btn-info-bg-colour;
   display: flex;
   font-family: sans-serif;
@@ -6,7 +7,6 @@
 }
 
 .Navbar__Link {
-  // padding-right: 8px;
 
   & > a {
     display: block;
@@ -22,6 +22,7 @@
 
 .Navbar__Items {
   display: flex;
+
   & > .active > a,
   & > .active > a:focus,
   & > .active > a:hover {
@@ -33,7 +34,7 @@
 }
 
 .Navbar__Items--right {
-  margin-left:auto;
+  margin-left: auto;
 
 }
 
@@ -54,11 +55,15 @@
   }
       
   .Navbar__Items--right {
-      margin-left:0;
+    margin-left:0;
   }
       
   .Navbar__ToggleShow {
-      display: flex;
+    position: absolute;
+    top: $navHeight;
+    display: flex;
+    width: 100%;
+    background-color: $btn-info-bg-colour;
   }
   
   .Navbar__Link--brand {
