--- a/assets/_scss/local/_body.scss
+++ b/assets/_scss/local/_body.scss
@@ -50,8 +50,7 @@ body {
   }
   
   main {
-    z-index: 1;
-    background-color: $main-bg-colour; //#333745;
+      background-color: $main-bg-colour; //#333745;
     /* Natural flow and rhythm in articles by default */
     & > * + * {
       padding-top: 3em;
