--- a/assets/_scss/local/_cover.scss
+++ b/assets/_scss/local/_cover.scss
@@ -1,4 +1,6 @@
 .cover {
+  position: relative;
+  z-index: -10;
   background-position: center;
   background-size: cover;
   display: flex;
